# multi-home-cabal-example

./: LICENSE  README.md  cabal.project
lib/awesome-prelude/: awesome-prelude.cabal
lib/awesome-prelude/src/Awesome/: Prelude.hs
lib/gnarly-library/: gnarly-library.cabal
lib/gnarly-library/src/: Gnarly.hs
service/funky-service/: funky-service.cabal
service/funky-service/app/: Main.hs
service/funky-service/src/: Funky.hs
service/funky-service/test/: Main.hs
