cabal-version: 2.2
name: awesome-prelude
version: 0.0.1
build-type: Simple

common globals
  ghc-options:
    -Wall
    -Werror
    -Wredundant-constraints
    -Wpartial-fields
    -fhide-source-paths

  default-language:
    Haskell2010

  default-extensions:
    NoImplicitPrelude

library
  import:
    globals
  exposed-modules:
    Awesome.Prelude
  hs-source-dirs:
    src
  build-depends:
    , base < 5
    , bytestring
    , generic-data
    , generic-lens
    , lens
    , mtl
    , newtype-generics
    , text
    , time
    , transformers
    , unordered-containers
    , unliftio-core ^>= 0.2
    , uuid
