cabal-version: 2.2
name: gnarly-library
version: 0.0.1
build-type: Simple

common globals
  ghc-options:
    -Wall
    -Werror
    -Wredundant-constraints
    -Wpartial-fields
    -fhide-source-paths

  default-language:
    Haskell2010

  default-extensions:
    NoImplicitPrelude
    TypeApplications

library
  import:
    globals
  exposed-modules:
    Gnarly
  hs-source-dirs:
    src
  build-depends:
    , awesome-prelude

    , base < 5
    , aeson
    , bytestring
